--- a/contacts.html
+++ b/contacts.html
@@ -2,57 +2,42 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Coloristik</title>
+    <title>Coloristic</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 </head>
 <body>
+
     <div class="wrapper">
-        <div class="start-wrapper">
-            <div class="header">
-                <div class="social">
-                    <a href="#" class="social-link-header"><i class="fab fa-facebook-f"></i></a>
-                    <a href="#" class="social-link-header"><i class="fab fa-instagram"></i></a>
-                </div>
-                <div class="barbershop-name-description">
-                    <a href="#" class="barbershop-name">Coloristik</a>
-                    <p class="description">Мастерская красоты закрытого типа</p>
-                </div>
-                <a href="tel:+375293559001" class="phone-number">+375293559001</a>
+        <div class="contacts-wrapper">
+        <div class="header">
+            <div class="social">
+                <a href="#" class="social-link-header"><i class="fab fa-facebook-f"></i></a>
+                <a href="#" class="social-link-header"><i class="fab fa-instagram"></i></a>
+            </div>
+            <div class="barbershop-name-description">
+                <a href="#" class="barbershop-name">Coloristik</a>
+                <p class="description">Мастерская красоты закрытого типа</p>
+            </div>
+            <a href="tel:+375293559001" class="phone-number">+375293559001</a>
 
-                <nav class="header-menu">
-                    <ul class="header-menu-list">
-                        <li class="header-menu-item services-menu"><a href="#" class="header-menu-link services-nav">услуги</a>
-                            <ul class="services-menu-list">
-                                <li class="services-menu-item"><a href="#" class="services-menu-link">СТРИЖКИ И УКЛАДКИ</a></li>
-                                <li class="services-menu-item"><a href="#" class="services-menu-link">ОКРАШИВАНИЕ ВОЛОС</a></li>
-                                <li class="services-menu-item"><a href="#" class="services-menu-link">УХОД ДЛЯ ВОЛОС</a></li>
-                            </ul>
-                        </li>
-                        <li class="header-menu-item"><a href="#" class="header-menu-link">акции</a></li>
-                        <li class="header-menu-item"><a href="#" class="header-menu-link">фотогалерея</a></li>
-                        <li class="header-menu-item"><a href="contacts.html" class="header-menu-link">контакты</a></li>
-                        <li class="header-menu-item"><a href="#" class="header-menu-link">обучение</a></li>
-                    </ul>
-                </nav>
-            </div> <!-- end header -->
-
-            <div class="content">
-                <h1>Мы знаем, как выглядит идеальное окрашивание и стрижка</h1>
-            </div> <!-- end content -->
-
-            <div class="discount">
-                <h2 class="discount-header">
-                    При записи онлайн скидка 5%
-                </h2>
-                <p class="discount-content">
-                    Кто-то посетил сайт на ночь глядя и звонить уже напрасно.
-                    Кто -то на работе или занят повседневной суетой.
-                    Мы ценим комфорт наших Гостей и предлагаем запись онлайн - это удобно!
-                </p>
-                <button class="discount-btn"><a href="#" class="online-registration">записаться онлайн</a></button>
-            </div> <!-- end discount -->
+            <nav class="header-menu">
+                <ul class="header-menu-list">
+                    <li class="header-menu-item services-menu"><a href="#" class="header-menu-link services-nav">услуги</a>
+                        <ul class="services-menu-list">
+                            <li class="services-menu-item"><a href="#" class="services-menu-link">СТРИЖКИ И УКЛАДКИ</a></li>
+                            <li class="services-menu-item"><a href="#" class="services-menu-link">ОКРАШИВАНИЕ ВОЛОС</a></li>
+                            <li class="services-menu-item"><a href="#" class="services-menu-link">УХОД ДЛЯ ВОЛОС</a></li>
+                        </ul>
+                    </li>
+                    <li class="header-menu-item"><a href="#" class="header-menu-link">акции</a></li>
+                    <li class="header-menu-item"><a href="#" class="header-menu-link">фотогалерея</a></li>
+                    <li class="header-menu-item"><a href="#" class="header-menu-link">контакты</a></li>
+                    <li class="header-menu-item"><a href="#" class="header-menu-link">обучение</a></li>
+                </ul>
+            </nav>
+        </div> <!-- end header -->
 
             <div class="contacts">
                 <ul class="contacts-menu">
@@ -61,7 +46,7 @@
                     <li class="contacts-menu-item"><address class="barbershop-address">г.Минск, ул.Тимошенко, 8</address></li>
                     <li class="contacts-menu-item"><p>Мы работаем 7 дней в неделю, но исключительно под запись и в удобное для Вас время</p></li>
                 </ul>
-            </div> <!-- end contacts -->
+            </div>
 
             <div class="map-container">
                 <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2350.434619540864!2d27.460071155914022!3d53.906252356878!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46dbdacd547b6ef9%3A0xe923952524c985da!2z0YPQu9C40YbQsCDQotC40LzQvtGI0LXQvdC60L4gOCwg0JzQuNC90YHQug!5e0!3m2!1sru!2sby!4v1551279360176" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
@@ -90,8 +75,10 @@
                     <li class="services-item"><a href="" class="services-link">окрашивание&#8194;волос</a></li>
                     <li class="services-item"><a href="" class="services-link">уход&#8194;для&#8194;волос</a></li>
                 </ul>
-            </div> <!-- end footer -->
-        </div> <!-- end start-wrapper -->
-    </div> <!-- end wrapper -->
+            </div>
+
+        </div> <!-- end contacts-wrapper -->
+    </div>
+
 </body>
 </html>
