--- a/contacts.html
+++ b/contacts.html
@@ -13,29 +13,37 @@
         <div class="contacts-wrapper">
         <div class="header">
             <div class="social">
-                <a href="#" class="social-link-header"><i class="fab fa-facebook-f"></i></a>
                 <a href="#" class="social-link-header"><i class="fab fa-instagram"></i></a>
             </div>
             <div class="barbershop-name-description">
-                <a href="#" class="barbershop-name">Coloristik</a>
-                <p class="description">Мастерская красоты закрытого типа</p>
+                <a href="start.html" class="barbershop-name">Coloristik</a>
+                <p class="barbershop-description">Мастерская красоты закрытого типа</p>
             </div>
-            <a href="tel:+375293559001" class="phone-number">+375293559001</a>
+            <div class="phone">
+                <a href="tel:+375293559001" class="phone-icon"><i class="fas fa-phone"></i></a>
+                <a href="tel:+375293559001" class="phone-number phone-number-header">+375293559001</a>
+            </div>
+
 
             <nav class="header-menu">
-                <ul class="header-menu-list">
-                    <li class="header-menu-item services-menu"><a href="#" class="header-menu-link services-nav">услуги</a>
-                        <ul class="services-menu-list">
-                            <li class="services-menu-item"><a href="#" class="services-menu-link">СТРИЖКИ И УКЛАДКИ</a></li>
-                            <li class="services-menu-item"><a href="#" class="services-menu-link">ОКРАШИВАНИЕ ВОЛОС</a></li>
-                            <li class="services-menu-item"><a href="#" class="services-menu-link">УХОД ДЛЯ ВОЛОС</a></li>
-                        </ul>
-                    </li>
-                    <li class="header-menu-item"><a href="#" class="header-menu-link">акции</a></li>
-                    <li class="header-menu-item"><a href="#" class="header-menu-link">фотогалерея</a></li>
-                    <li class="header-menu-item"><a href="#" class="header-menu-link">контакты</a></li>
-                    <li class="header-menu-item"><a href="#" class="header-menu-link">обучение</a></li>
-                </ul>
+                <div class="nav-toggle">
+                    <input class="nav-btn" type="checkbox" />
+                    <span class="nav-btn-item"></span>
+                    <span class="nav-btn-item"></span>
+                    <span class="nav-btn-item"></span>
+                    <ul class="header-menu-list">
+                        <li class="header-menu-item services-menu"><a href="services.html" class="header-menu-link services-nav">услуги</a>
+                            <ul class="services-menu-list">
+                                <li class="services-menu-item"><a href="#" class="services-menu-link">СТРИЖКИ И УКЛАДКИ</a></li>
+                                <li class="services-menu-item"><a href="#" class="services-menu-link">ОКРАШИВАНИЕ ВОЛОС</a></li>
+                                <li class="services-menu-item"><a href="#" class="services-menu-link">УХОД ДЛЯ ВОЛОС</a></li>
+                            </ul>
+                        </li>
+                        <li class="header-menu-item"><a href="#" class="header-menu-link">акции</a></li>
+                        <li class="header-menu-item"><a href="#" class="header-menu-link">фотогалерея</a></li>
+                        <li class="header-menu-item"><a href="contacts.html" class="header-menu-link">контакты</a></li>
+                    </ul>
+                </div>
             </nav>
         </div> <!-- end header -->
 
@@ -57,7 +65,6 @@
             <div class="footer">
                 <div class="first-footer">
                     <a href="#" class="barbershop-name-footer"><h3 class="footer-main-header">Coloristik</h3></a>
-                    <a href="#" class="social-link-footer"><i class="fab fa-facebook-f"></i></a>
                     <a href="#" class="social-link-footer"><i class="fab fa-instagram"></i></a>
                 </div>
                 <div class="barbershop-address">
