ref styles change width/height units

--- a/start.html
+++ b/start.html
@@ -85,7 +85,7 @@
                 </div>
                 <div class="barbershop-address">
                     <h4 class="footer-header">Наш адрес</h4>
-                    <address>г.Минск, ул.Тимошенко, 8</address>
+                    <address class="address-footer">г.Минск, ул.Тимошенко, 8</address>
                 </div>
                 <ul class="about-us">
                     <h3 class="about-us-header footer-header">О нас</h3>
