--- a/contacts.html
+++ b/contacts.html
@@ -69,7 +69,7 @@
                 </div>
                 <div class="barbershop-address">
                     <h4 class="footer-header">Наш адрес</h4>
-                    <address>г.Минск, ул.Тимошенко, 8</address>
+                    <address class="address-footer">г.Минск, ул.Тимошенко, 8</address>
                 </div>
                 <ul class="about-us">
                     <h3 class="about-us-header footer-header">О нас</h3>
@@ -77,12 +77,12 @@
                     <li class="about-us-item"><a href="" class="about-us-link">sdfghj</a></li>
                 </ul>
                 <ul class="services">
-                    <h3 class="services-header footer-header">Услуги</h3>
+                    <h3 class="services-header footer-header"><a href="services.html" class="services-bottom-link">Услуги</a></h3>
                     <li class="services-item"><a href="" class="services-link">стрижки&#8194;и&#8194;укладки</a></li>
                     <li class="services-item"><a href="" class="services-link">окрашивание&#8194;волос</a></li>
                     <li class="services-item"><a href="" class="services-link">уход&#8194;для&#8194;волос</a></li>
                 </ul>
-            </div>
+            </div> <!-- end footer -->
 
         </div> <!-- end contacts-wrapper -->
     </div>
