--- a/contacts.html
+++ b/contacts.html
@@ -16,7 +16,7 @@
                 <a href="#" class="social-link-header"><i class="fab fa-instagram"></i></a>
             </div>
             <div class="barbershop-name-description">
-                <a href="start.html" class="barbershop-name">Coloristik</a>
+                <a href="index.html" class="barbershop-name">Coloristik</a>
                 <p class="barbershop-description">Мастерская красоты закрытого типа</p>
             </div>
             <div class="phone">
@@ -34,13 +34,13 @@
                     <ul class="header-menu-list">
                         <li class="header-menu-item services-menu"><a href="services.html" class="header-menu-link services-nav">услуги</a>
                             <ul class="services-menu-list">
-                                <li class="services-menu-item"><a href="#" class="services-menu-link">СТРИЖКИ И УКЛАДКИ</a></li>
-                                <li class="services-menu-item"><a href="#" class="services-menu-link">ОКРАШИВАНИЕ ВОЛОС</a></li>
-                                <li class="services-menu-item"><a href="#" class="services-menu-link">УХОД ДЛЯ ВОЛОС</a></li>
+                                <li class="services-menu-item"><a href="services.html" class="services-menu-link">СТРИЖКИ И УКЛАДКИ</a></li>
+                                <li class="services-menu-item"><a href="services.html" class="services-menu-link">ОКРАШИВАНИЕ ВОЛОС</a></li>
+                                <li class="services-menu-item"><a href="services.html" class="services-menu-link">УХОД ДЛЯ ВОЛОС</a></li>
                             </ul>
                         </li>
-                        <li class="header-menu-item"><a href="#" class="header-menu-link">акции</a></li>
-                        <li class="header-menu-item"><a href="#" class="header-menu-link">фотогалерея</a></li>
+                        <!--<li class="header-menu-item"><a href="#" class="header-menu-link">акции</a></li>-->
+                        <li class="header-menu-item"><a href="gallery.html" class="header-menu-link">фотогалерея</a></li>
                         <li class="header-menu-item"><a href="contacts.html" class="header-menu-link">контакты</a></li>
                     </ul>
                 </div>
@@ -71,11 +71,11 @@
                     <h4 class="footer-header">Наш адрес</h4>
                     <address class="address-footer">г.Минск, ул.Тимошенко, 8</address>
                 </div>
-                <ul class="about-us">
-                    <h3 class="about-us-header footer-header">О нас</h3>
-                    <li class="about-us-item"><a href="" class="about-us-link">sdfghjk</a></li>
-                    <li class="about-us-item"><a href="" class="about-us-link">sdfghj</a></li>
-                </ul>
+                <!--<ul class="about-us">-->
+                    <!--<h3 class="about-us-header footer-header">О нас</h3>-->
+                    <!--<li class="about-us-item"><a href="" class="about-us-link">sdfghjk</a></li>-->
+                    <!--<li class="about-us-item"><a href="" class="about-us-link">sdfghj</a></li>-->
+                <!--</ul>-->
                 <ul class="services">
                     <h3 class="services-header footer-header"><a href="services.html" class="services-bottom-link">Услуги</a></h3>
                     <li class="services-item"><a href="" class="services-link">стрижки&#8194;и&#8194;укладки</a></li>
