ref styles vh for font-sizes

--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
             <div class="contacts">
                 <ul class="contacts-menu">
                     <li class="contacts-menu-item"><h3 class="contacts-header">Наши контакты</h3></li>
-                    <li class="contacts-menu-item"><a href="tel:+375293559001" class="phone-number">+375(29)355-90-01</a></li>
+                    <li class="contacts-menu-item"><a href="tel:+375293559001" class="phone-number phone-number-contact">+375(29)355-90-01</a></li>
                     <li class="contacts-menu-item"><address class="barbershop-address">г.Минск, ул.Тимошенко, 8</address></li>
-                    <li class="contacts-menu-item"><p>Мы работаем 7 дней в неделю, но исключительно под запись и в удобное для Вас время</p></li>
+                    <li class="contacts-menu-item"><p class="schedule">Мы работаем 7 дней в неделю, но исключительно под запись и в удобное для Вас время</p></li>
                 </ul>
             </div> <!-- end contacts -->
 
@@ -89,7 +89,7 @@
                     <a href="#" class="barbershop-name-footer"><h3 class="footer-main-header">Coloristik</h3></a>
                     <a href="#" class="social-link-footer"><i class="fab fa-instagram"></i></a>
                 </div>
-                <div class="barbershop-address">
+                <div class="barbershop-address-footer">
                     <h4 class="footer-header">Наш адрес</h4>
                     <address class="address-footer">г.Минск, ул.Тимошенко, 8</address>
                 </div>
