--- a/services.html
+++ b/services.html
@@ -75,6 +75,19 @@
                 </ul> <!-- end hair-care-list -->
             </div><!-- end services-content -->
 
+            <div class="contacts">
+                <ul class="contacts-menu">
+                    <li class="contacts-menu-item"><h3 class="contacts-header">Наши контакты</h3></li>
+                    <li class="contacts-menu-item"><a href="tel:+375293559001" class="phone-number phone-number-contact">+375(29)355-90-01</a></li>
+                    <li class="contacts-menu-item"><address class="barbershop-address">г.Минск, ул.Тимошенко, 8</address></li>
+                    <li class="contacts-menu-item"><p class="schedule">Мы работаем 7 дней в неделю, но исключительно под запись и в удобное для Вас время</p></li>
+                </ul>
+            </div> <!-- end contacts -->
+
+            <div class="map-container">
+                <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2350.434619540864!2d27.460071155914022!3d53.906252356878!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46dbdacd547b6ef9%3A0xe923952524c985da!2z0YPQu9C40YbQsCDQotC40LzQvtGI0LXQvdC60L4gOCwg0JzQuNC90YHQug!5e0!3m2!1sru!2sby!4v1551279360176" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+            </div>
+
             <!--<div class="discount">-->
                 <!--<h2 class="discount-header">-->
                     <!--При записи онлайн скидка 5%-->
@@ -94,7 +107,7 @@
                     <a href="#" class="barbershop-name-footer"><h3 class="footer-main-header">Coloristik</h3></a>
                     <a href="#" class="social-link-footer"><i class="fab fa-instagram"></i></a>
                 </div>
-                <div class="barbershop-address">
+                <div class="barbershop-address-footer">
                     <h4 class="footer-header">Наш адрес</h4>
                     <address class="address-footer">г.Минск, ул.Тимошенко, 8</address>
                 </div>
