--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
             </div> <!-- end header -->
 
             <div class="content">
-                <h1>Мы знаем, как выглядит идеальное окрашивание и стрижка</h1>
+                <h1 class="slogan">Мы знаем, как выглядит идеальное окрашивание и стрижка</h1>
+                <img src="images/bg1.jpg" class="bg-img">
             </div> <!-- end content -->
 
             <!--<div class="discount">-->
