--- a/gallery.html
+++ b/gallery.html
@@ -12,7 +12,7 @@
     <div class="gallery-wrapper">
         <div class="header">
             <div class="social">
-                <a href="#" class="social-link-header"><i class="fab fa-instagram"></i></a>
+                <a href="hhttps://www.instagram.com/coloristik_minsk/?utm_source=ig_profile_share&igshid=w6fz0b6dgvla" class="social-link-header"><i class="fab fa-instagram"></i></a>
             </div>
             <div class="barbershop-name-description">
                 <a href="index.html" class="barbershop-name">Coloristik</a>
