--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="start-wrapper">
             <div class="header">
                 <div class="social">
-                    <a href="#" class="social-link-header"><i class="fab fa-instagram"></i></a>
+                    <a href="https://www.instagram.com/coloristik_minsk/?utm_source=ig_profile_share&igshid=w6fz0b6dgvla" class="social-link-header"><i class="fab fa-instagram"></i></a>
                 </div>
                 <div class="barbershop-name-description">
                     <a href="index.html" class="barbershop-name">Coloristik</a>
@@ -49,7 +49,7 @@
 
             <div class="content">
                 <h1 class="slogan">Мы знаем, как выглядит идеальное окрашивание и стрижка</h1>
-                <img src="images/bg1.jpg" class="bg-img">
+                <!--<img src="images/bg1.jpg" class="bg-img">-->
             </div> <!-- end content -->
 
             <!--<div class="discount">-->
